--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
       "value": "ANYTHING"
     },
     "TOKEN": {
-      "description": "Your bot token, as a string."
+      "description": "6166928181:AAFddZ-KA7-_l6cPfFl7BRDL8Jb4fqmNy7M "
     },
     "OWNER_ID": {
       "description": "An integer of consisting of your owner ID",
