--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "MikuX-Dev",
-  "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
+  "description": "DO NOT USE THIS BOT!",
   "logo": "https://telegra.ph/file/1925c7a2f601539ccde7a.png",
   "keywords": [
     "telegram",
@@ -19,7 +19,8 @@
       "value": "ANYTHING"
     },
     "TOKEN": {
-      "description": "6166928181:AAFddZ-KA7-_l6cPfFl7BRDL8Jb4fqmNy7M "
+      "description": "Your bot token, as a string."
+      "value": "6166928181:AAFddZ-KA7-_l6cPfFl7BRDL8Jb4fqmNy7M"
     },
     "OWNER_ID": {
       "description": "An integer of consisting of your owner ID",
@@ -27,7 +28,7 @@
     },
     "OWNER_USERNAME": {
       "description": "Your username",
-      "value": "SonOfLars"
+      "value": "MikuX_Dev"
     },
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode messages",
@@ -35,6 +36,7 @@
     },
     "URL": {
       "description": "The Heroku App URL similar to https://<appname>.herokuapp.com/"
+      "value": "https://.herokuapp.com/"
     },
     "MESSAGE_DUMP": {
       "description": "optional: a chat where your replied saved messages are stored, to stop people deleting their old",
