--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
     },
     "URL": {
       "description": "The Heroku App URL similar to https://<appname>.herokuapp.com/"
-      "value": "https://.herokuapp.com/"
+      "value": "https://rose64bot.herokuapp.com/"
     },
     "MESSAGE_DUMP": {
       "description": "optional: a chat where your replied saved messages are stored, to stop people deleting their old",
