--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -10,6 +10,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    steps:
+    - name: Set up PostgreSQL
+      run: |
+         sudo apt-get update && sudo apt-get install postgresql
+         sudo su - postgres
+         createuser -P -s -e nexcrypt
+         createdb -O nexcrypt nexcryptdb
+         
 
     steps:
       - name: Set up PostgreSQL
