--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -4,28 +4,28 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: "0 * * * *"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Set up PostgreSQL
-      run: |
-         sudo apt-get update && sudo apt-get install postgresql
-         sudo su - postgres
-         createuser -P -s -e nexcrypt
-         createdb -O nexcrypt nexcryptdb
-         
 
-    steps:
-      - name: Set up PostgreSQL
-        uses: docker://postgres:latest
+    services:
+      postgres:
+        image: postgres:latest
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: test_db
+          POSTGRES_USER: miku
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-      # Add any additional steps for building and testing your PostgreSQL server
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Connect to PostgreSQL
+        run: psql -h localhost -U miku -d MikuX_db -c "SELECT version();"
+
+      - name: Run SQL scripts
+        run: |
+          psql -h localhost -U miku -d miku_db -f telegram_bot_schema.sql
