--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -15,17 +15,17 @@ jobs:
         env:
           POSTGRES_USER: miku
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_DB: MikuX_db
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Connect to PostgreSQL
-        run: psql -h localhost -U miku -d MikuX_db -c "SELECT version();"
-
-      - name: Run SQL scripts
+      - name: Set up PostgreSQL
         run: |
-          psql -h localhost -U miku -d miku_db -f telegram_bot_schema.sql
+          psql -h localhost -U miku -c telegram_bot_schema.sql
+
+      # Add other steps for building and testing your Telegram bot code
